tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs/node/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs.errors.txt
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(3,5): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(4,5): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


==== DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json (2 errors) ====
    {
      "compilerOptions": {
        "out": "test.js",
        ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
        "allowJs": true
        ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
      }
    }
==== DifferentNamesNotSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;
==== DifferentNamesNotSpecifiedWithAllowJs/b.js (0 errors) ====
    var test2 = 10; // Should get compiled